# DIOCESE

./: .gitignore  README.md  build.bat  go.mod  go.sum
.github/workflows/: build-windows.yml
Python/: .gitignore  ENCRYPTION_AND_BACKUP.md  MENU_HELP_ABOUT.md  PASSWORD_PROTECTION.md  PRINT_LAYOUT_GUIDE.md  README.md  README.txt  backup.py  build.bat  config.py  db.py  layouts.py  main.py  printing.py  pyproject.toml  requirements.txt  secure_store.py  ui_baptism.py  ui_common.py  ui_death.py  ui_help.py  ui_marriage.py  ui_settings.py
Python/assets/help/: README.txt
Python/installer/: setup.iss
cmd/diocesecerts/: main.go
installer/: setup.iss
internal/config/: config.go
internal/model/: model.go
internal/printing/: layouts.go  print.go
internal/store/: store.go
internal/ui/: app.go  baptism.go  captionbutton.go  death.go  marriage.go  settings.go
resource/: app.manifest  versioninfo.json
